<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.lotteryevent.ui.HomeFragment"
        android:label="Home">
        <action
            android:id="@+id/action_homeFragment_to_organizerEventPageFragment"
            app:destination="@id/organizerEventPageFragment" />
        <action
            android:id="@+id/action_homeFragment_to_createEventFragment"
            app:destination="@id/createEventFragment" />
        <action
            android:id="@+id/action_homeFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/organizerEventPageFragment"
        android:name="com.example.lotteryevent.ui.organizer.OrganizerEventFragment"
        android:label="Event Details"
        tools:layout="@layout/fragment_organizer_event_page">
        <action
            android:id="@+id/action_organizerEventPageFragment_to_entrantMapFragment"
            app:destination="@id/entrantMapFragment" />
        <action
            android:id="@+id/action_organizerEventPageFragment_to_runDrawFragment"
            app:destination="@id/runDrawFragment"/>
        <action
            android:id="@+id/action_organizerEventPageFragment_to_entrantListFragment"
            app:destination="@id/entrantListFragment" />

        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/runDrawFragment"
        android:name="com.example.lotteryevent.ui.organizer.RunDrawFragment"
        android:label="Run Draw"
        tools:layout="@layout/fragment_run_draw">
        <action
            android:id="@+id/action_runDrawFragment_to_confirmDrawAndNotifyFragment"
            app:destination="@id/confirmDrawAndNotifyFragment"/>
    </fragment>

    <fragment
        android:id="@+id/confirmDrawAndNotifyFragment"
        android:name="com.example.lotteryevent.ui.organizer.ConfirmDrawAndNotifyFragment"
        android:label="Confirm Draw"
        tools:layout="@layout/fragment_confirm_draw_and_notify">

        <argument
            android:name="eventId"
            app:argType="string"/>
        <argument
            android:name="oldEntrantsStatus"
            app:argType="string"/>
        <argument
            android:name="newChosenEntrants"
            app:argType="string"/>
        <argument
            android:name="newUnchosenEntrants"
            app:argType="string"/>

        <action
            android:id="@+id/action_confirmDrawAndNotifyFragment_to_organizerEventPageFragment"
            app:destination="@id/organizerEventPageFragment"
            app:popUpTo="@id/organizerEventPageFragment"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/createEventFragment"
        android:name="com.example.lotteryevent.ui.CreateEventFragment"
        android:label="@string/create_new_event"
        tools:layout="@layout/fragment_create_event" />
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.lotteryevent.ui.UserProfileFragment"
        android:label="@string/user_profile_page"
        tools:layout="@layout/fragment_user_profile" >
        <action
            android:id="@+id/action_userProfileFragment_to_registrationHistoryFragment"
            app:destination="@id/registrationHistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/availableEventsFragment"
        android:name="com.example.lotteryevent.ui.AvailableEventsFragment"
        android:label="Events"
        tools:layout="@layout/fragment_available_events" />
    <fragment
        android:id="@+id/lotteryGuidelines"
        android:name="com.example.lotteryevent.ui.LotteryGuidelinesFragment"
        android:label="@string/lottery_guidelines_title"
        tools:layout="@layout/fragment_lottery_guidelines" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.example.lotteryevent.ui.NotificationsFragment"
        android:label="Notifications" >
        <argument
            android:name="isAdminView"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_notificationsFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment"/>
    </fragment>

    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="com.example.lotteryevent.ui.EventDetailsFragment"
        android:label="Event Details"
        tools:layout="@layout/fragment_event_details">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/qrScannerFragment"
        android:name="com.example.lotteryevent.ui.QrScannerFragment"
        android:label="Scan QR Code"
        tools:layout="@layout/fragment_qr_scanner">
        <action
            android:id="@+id/action_qrScannerFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/entrantListFragment"
        android:name="com.example.lotteryevent.ui.organizer.EntrantListFragment"
        android:label="Entrants"
        tools:layout="@layout/fragment_entrant_list" >

        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/entrantMapFragment"
        android:name="com.example.lotteryevent.ui.organizer.EntrantMapFragment"
        android:label="Entrant Map"
        tools:layout="@layout/fragment_entrant_map">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>


    <!-- Admin Fragments -->
    <fragment
        android:id="@+id/adminSentNotificationsFragment"
        android:name="com.example.lotteryevent.ui.admin.AdminSentNotificationsFragment"
        android:label="Sent Notifications" />

        <action
            android:id="@+id/action_adminSentNotificationsFragment_to_adminSelectEventFragment"
            app:destination="@id/adminSelectEventFragment"
            app:popUpTo="@id/adminSentNotificationsFragment"
            app:popUpToInclusive="true"/>

    <fragment
        android:id="@+id/adminSelectEventFragment"
        android:name="com.example.lotteryevent.ui.admin.AdminSelectEventFragment"
        android:label="Select Event"
        tools:layout="@layout/fragment_admin_event_select">

        <action
            android:id="@+id/action_adminSelectEventFragment_to_notificationsFragment"
            app:destination="@id/notificationsFragment">
            <argument
                android:name="isAdminView"
                android:defaultValue="true" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/adminImagesFragment"
        android:name="com.example.lotteryevent.ui.admin.AdminImagesFragment"
        android:label="Images" />

    <fragment
        android:id="@+id/adminProfilesFragment"
        android:name="com.example.lotteryevent.ui.admin.AdminProfilesFragment"
        android:label="Profiles" >
        <action
            android:id="@+id/action_adminProfiles_to_userProfile"
            app:destination="@id/adminUserProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/adminUserProfileFragment"
        android:name="com.example.lotteryevent.ui.admin.AdminUserProfileFragment">
        <argument
            android:name="userId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/registrationHistoryFragment"
        android:name="com.example.lotteryevent.ui.RegistrationHistoryFragment"
        android:label="Registration History"
        tools:layout="@layout/fragment_registration_history" />

</navigation>
